# gtfs-inmemory-server-rust

./: .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  GIMS.postman_collection.json  Jenkinsfile  README.md  docker-compose.yml  stop_geojsons.csv
.githooks/: pre-commit
assets/: entity_id_name.csv  static_fleet_info.csv  stop_geojsons.csv  stop_provider_mapping.csv  stop_regional_names.csv  suburban_stop_info.csv
dhall-configs/dev/: gtfs_in_memory_server_rust.dhall
dhall-configs/secrets/: gtfs_in_memory_server_rust.example.dhall
docs/: PERFORMANCE_OPTIMIZATION.md
src/: config.rs  environment.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs
src/graphql/: mod.rs
src/graphql/queries/: mod.rs
src/graphql/responses/: mod.rs
src/graphql/types/: mod.rs
src/handlers/: routes.rs
src/services/: db_vehicle_reader.rs  gtfs_service.rs  mod.rs  otp_manager.rs  trip_service.rs
src/tools/: dhall.rs  error.rs  mod.rs  prometheus.rs
