[package]
name = "gtfs-routes-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-http = "3.4.0"
actix = "0.13.0"
actix-cors = "0.6"
actix-web-prom = "0.7.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Tracing
prometheus = { version = "0.13.3", features = ["process"] }
once_cell = "1.17.1"

# Configuration
config = "0.14"
dotenv = "0.15"
dhall = "0.11"
serde_dhall = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing and encoding
url = "2.5"
urlencoding = "2.1"

# Hash computation
sha2 = "0.10"

# System information
sysinfo = "0.30"

# Rate limiting
governor = "0.6"

# System calls for socket optimization
libc = "0.2"

# Connection pooling
deadpool = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "uuid"] }
async-trait = "0.1"
futures = "0.3"

# CSV parsing
csv = "1.3"

# CPU detection for optimal worker count
num_cpus = "1.0"

regex = "1.10.3"
shared = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "05af149" }
macros = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "05af149" }

[dev-dependencies]
tokio-test = "0.4"
